Make scout form visible, will change later

--- a/templates/scout.html
+++ b/templates/scout.html
@@ -102,7 +102,8 @@
 
   </head>
   <body>
-    <form id="scout_form">
+    Welcome <br><br>
+    <form id="scout_form" >
         Your Name: <input id="field_name" type="text" name="name"> <br>
       Team Number: <input id="field_team_number" type="text" name="team_number"> <br>
       Match Number: <input id="field_match_number"type="text" name="match_number"> <br>
@@ -131,7 +132,7 @@
         <div id="t_fuel"></div>
         <div id="t_climb"></div>
         Comments: <br>
-        <textarea name="form_comments" cols="50" rows="10"> </textarea>
+        <textarea name="form_comments" cols="50" rows="10" maxlength="150"> </textarea>
         <div id="t_yellow_card"></div>
       </div>
 
