--- a/templates/scout.html
+++ b/templates/scout.html
@@ -6,36 +6,175 @@
     <!--TODO: Maybe it would be ligher on the server if we didn't store these locally? -->
     <script type="text/javascript" src="/lib/jquery-3.2.1.min.js"> </script>
     <script type="text/javascript" src="/lib/mustache.min.js"> </script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- This is temporary. TODO: Make a static css file -->
-    <style>
-      .binary_button_yes {
-          color: white;
-          background-color: #4CAF50;
-      }
-      .binary_button_no {
-          color: white;
-          background-color: #f44336;
-      }
-      .binary_button_blank {
-          background-color: #e7e7e7; 
-      }
-    </style>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <!-- Form submission handled here -->
     <script type="text/javascript">
-        function submit_data() {
+
+        function load_data() {
+ 
+            var match = $("#field_match_number").val();
+            var team = $("#field_team_number").val();
+
+            $("#scout_match_form_header").html(
+                "<h1>Match: " + match + "<br>"
+                + "Team " + team + "</h1><br>"
+              ); 
+
+
+
+            // SET DEFAULT VALUES
+            // In order of appearance
+            button_change('cross_green_line', false);
+ 
+            $('input[name="gear_score"]').val(["NO"]);
+            $('input[name="gear_routine"]').val(["NONE"]);
+
+            counter_set("fuel_auton", 0);
+            counter_set("hoppers", 0);
+            counter_set("gears_scored", 0);
+            counter_set("gears_dropped", 0);
+            counter_set("fuel_teleop", 0);
+            
+            button_change('climb', false);
+
+            $("#comments").val( "" );
+            button_change('yellow_card', false);
+
             $.ajax({
+                url: "/getdata?match_number=" + match + "&team_number=" + team,
+                type: "GET",
+                success: function(data) {
+                    // If data exists
+                    if (data.length != 0) {
+                        data = data[0]; // object is stored in array
+                        
+                        // In order of appearance
+                        button_change('cross_green_line', data.cross_green_line);
+ 
+                        $('input[name="gear_score"]').val([ data.gear_score ]);
+                        $('input[name="gear_routine"]').val([ data.gear_routine ]);
+                        counter_set("fuel_auton", data.fuel_auton);
+                        counter_set("hoppers", data.hoppers);
+                        counter_set("gears_scored", data.gears_scored);
+                        counter_set("gears_dropped", data.gears_dropped);
+                        counter_set("fuel_teleop", data.fuel_teleop);
+
+                        /*$("#a_fuel_input").val( data.fuel_auton );
+                        $("#a_hopper_input").val( data.hoppers );
+                        
+                        $("#t_gear_input").val( data.gears_scored );
+                        $("#t_drop_input").val( data.gears_dropped );
+                        $("#t_fuel_input").val( data.fuel_teleop );
+                        */
+                        button_change('climb', data.climb);
+
+                        $("#comments").val( data.comments );
+                        button_change('yellow_card', data.yellow_card);
+
+                    } else {
+                        // Data does NOT exist
+                        $("#scout_match_form_info").html(
+                            "<br> <i> No prior data present, if you submit you will create a NEW entry</i><br><br>"
+                        );
+                    }
+                    // Show the form after it's done loading
+                    $("#scout_match_form").show();
+                    $("#critical_info_form").hide();
+                },
+                error: function(jqXHR, textStatus, errorThrown) {
+                    console.log(errorThrown);
+                    $("#scout_match_form_info").html(
+                        "<br> <h4> ERROR </h4> Did not load data, prior data might exist. Be wary when uploading<br>"
+                    );
+
+                    // Show the form after it's done loading
+                    $("#scout_match_form").show();
+                    $("#critical_info_form").hide();
+                }
+            });
+
+            /*data_request.success(function(data) {
+                // If data exists
+                if (data.length != 0) {
+                    data = data[0]; // object is stored in array
+                    $("#a_fuel_input").val( data.fuel_auton );
+                    $("#a_hopper_input").val( data.hoppers );
+                    $("#a_fuel_input").val( data.fuel_auton );
+                    $("#t_gear_input").val( data.gears_scored );
+                    $("#t_drop_input").val( data.gears_dropped );
+                    $("#t_fuel_input").val( data.fuel_teleop );
+
+                    $('input[name="gear_score"]').val([ data.gear_score ]);
+                    $('input[name="gear_routine"]').val([ data.gear_routine ]);
+
+                } else {
+                    // Data does NOT exist
+                    $("#scout_match_form_header").append(
+                        "<br> <i> No prior data present, if you submit you will create a NEW entry</i><br>"
+                    );
+                }
+                // Show the form after it's done loading
+                $("#scout_match_form").show();
+                $("#critical_info_form").hide();
+            });
+
+            // If grabbing data encounters an error...
+            data_request.error(function(jqXHR, textStatus, errorThrown) {
+                // Timeout. Will happen whenever there is no internet
+                if (textStatus == 'timeout') { 
+                    $("#scout_match_form_header").append(
+                        "<h4>WARNING:</h4> Cannot connect to server, and cannot grab prior server data!<br>"
+                    );
+                }
+
+                if (textStatus == 'error') {
+                    $("#scout_match_form_header").append(
+                        "<h4>Error:</h4> Server has encountered an error probably. Go shout at Adris for being dumb.<br>"
+                        + "error status: <br>" + errorThrown
+                    );
+                }
+
+                // Show the form after it's done loading
+                $("#scout_match_form").show();
+                $("#critical_info_form").hide();
+            });*/
+
+        }
+
+        function redo_form() {
+            $("#scout_match_form").hide();
+            $("#critical_info_form").show();
+
+            $("#success_log").html("");
+            $("#error_log").html("");
+        }
+
+        function submit_data() {
+            
+          $.ajax({
                 url: "/scout",
                 type: "post",
                 data: $("#scout_form").serialize(),
-                success:function() {
-                    document.getElementById("success_log").innerHTML = "Successfully updated!";
+                // TODO: replace document calls with jquery
+                success: function() {
+                    $("#success_log").html("Successfully updated!");
+                    $("#error_log").html("");
                 },
                 error: function() {
-                    document.getElementById("success_log").innerHTML = "Failed to update. Try using QR (once we get that up and running)";
-                },
-                timeout: 2000
+                    $("#error_log").html("Failed to update. Try using QR (once we get that up and running)");
+                    $("#success_log").html("");
+                }
             });
         }
     </script>
@@ -45,36 +184,49 @@
 
     <!-- Template handler script -->
     <script type="text/javascript">
+
+        function counter_set(id, val) { 
+            var field = $("#" + id + "_input")[0];
+            if (val < 0) val = 0;
+            if (val > 255) val = 255;
+            field.value = val;
+        }
+
         function counter_change(id, change) {
-            var field = document.getElementById(id + "_input");
+            var field = $("#" + id + "_input")[0];
             var val = parseInt (field.value);
-            field.value = val + change;
+            val += change;
+
+            if (val < 0) val = 0;
+            if (val > 255) val = 255;
+
+            field.value = val;
         }
 
         function button_change(id, state) {
-            var yes = document.getElementById(id + "_button_yes");
-            var no = document.getElementById(id + "_button_no");
-            var radio_yes = document.getElementById(id + "_button_radio_yes");
-            var radio_no = document.getElementById(id + "_button_radio_no");
+            var yes = $("#" + id + "_button_yes");
+            var no = $("#" + id + "_button_no");
+            var radio_yes = $("#" + id + "_button_radio_yes");
+            var radio_no = $("#" + id + "_button_radio_no");
 
             if (state) {
-                yes.value = 1;
-                no.value = 0;
+                yes.attr("value", 1);
+                no.attr("value", 0);
 
-                radio_yes.checked = "checked";
-                radio_no.checked = "";
+                radio_yes.attr("checked", true);
+                radio_no.attr("checked", false);
 
-                yes.className="binary_button_yes";
-                no.className="binary_button_blank";
+                yes.attr("class","btn btn-success btn-lg");
+                no.attr("class","btn btn-default btn-lg");
             } else {
-                yes.value = 0;
-                no.value = 1;
+                yes.attr("value", 0);
+                no.attr("value", 1);
 
-                radio_yes.checked = "";
-                radio_no.checked = "checked";
+                radio_yes.attr("checked", false);
+                radio_no.attr("checked", true);
                 
-                yes.className="binary_button_blank";
-                no.className="binary_button_no";
+                yes.attr("class","btn btn-default btn-lg");
+                no.attr("class","btn btn-danger btn-lg");
             }
         }
     </script>
@@ -84,7 +236,7 @@
     <script id="counter_template" type="x-tmpl-mustache">
       {{name}}: <br>
       <button id="{{id}}_minus" type="button" onclick="counter_change('{{id}}', -1)"> - </button> 
-      <input id="{{id}}_input" type="text" name="{{id}}_counter" value="0"> </input>
+      <input id="{{id}}_input" type="text" name="{{id}}" value="0"> </input>
       <button id="{{id}}_plus" type="button" onclick="counter_change('{{id}}', 1)"> + </button>
       <br><br>
     </script>
@@ -94,57 +246,84 @@
       {{name}}: <br>
       <button id="{{id}}_button_yes" type="button" class="binary_button_blank" value="0" onclick="button_change('{{id}}', true)"> Yes </button>
       <button id="{{id}}_button_no" type="button" class="binary_button_blank" value="1" onclick="button_change('{{id}}', false)"> No  </button>
-      <input id="{{id}}_button_radio_yes" type="radio" name="{{id}}_binary_button" value="yes" hidden>
-      <input id="{{id}}_button_radio_no" type="radio" name="{{id}}_binary_button" value="no" checked="checked" hidden>
+      <!-- These radio buttons are there to ensure that the form data is submitted (buttons are not counted into consideration) -->
+      <input id="{{id}}_button_radio_yes" type="radio" name="{{id}}" value="1" hidden> <!-- true -->
+      <input id="{{id}}_button_radio_no" type="radio" name="{{id}}" value="0" checked="checked" hidden> <!-- false -->
       <br><br>
     </script>
 
 
   </head>
   <body>
-    Welcome <br><br>
+    
+    <a class="btn btn-default btn-block" href="/data" role="button">View Data</a>
+
+    <h1> Scouting </h1>
+
     <form id="scout_form" >
-        Your Name: <input id="field_name" type="text" name="name"> <br>
-      Team Number: <input id="field_team_number" type="text" name="team_number"> <br>
-      Match Number: <input id="field_match_number"type="text" name="match_number"> <br>
-      <div id="auton_form"> 
-        <!-- These divs are here so we can place our templated inputs inside of them -->
-        <div id="a_cross"></div>
-        Successful Gear? <br>
-          <input type="radio" name="a_gear" value="yes"> Yes <br>
-          <input type="radio" name="a_gear" value="tried"> No, but attempted to <br>
-          <input type="radio" name="a_gear" value="no" checked="checked"> No, didn't try <br>
-        Gear Routine <br>
-          <input type="radio" name="a_gear_routine" value="hp"> Human Player Peg<br>
-          <input type="radio" name="a_gear_routine" value="center"> Center Peg <br>
-          <input type="radio" name="a_gear_routine" value="boiler"> Boiler peg<br>
-          <input type="radio" name="a_gear_routine" value="none" checked="checked"> None<br>
-
-        <div id="a_fuel"></div>
-        <div id="a_hopper"></div>
+      <div id="critical_info_form">
+        Your Name: <br><input id="field_name" class="form-control input-lg" type="text" name="author" placeholder="Name"> <br>
+        Team Number: <br><input id="field_team_number" class="form-control input-lg" type="text" name="team_number" placeholder="Team Number"> <br> 
+        Match Number: <br><input id="field_match_number" class="form-control input-lg" type="text" name="match_number" placeholder="Match Number"> <br>
+        <button type="button" onclick="load_data()" class="btn btn-primary btn-lg btn-block">Load Sheet</button>
+        <!--Your Name: <input id="field_name" type="text" name="author"> <br>
+        Team Number: <input id="field_team_number" type="text" name="team_number"> <br>
+        Match Number: <input id="field_match_number"type="text" name="match_number"> <br>
+        <button type="button" onclick="load_data()"> Load Sheet </button>-->
       </div>
-      
-      <br><br>
-      
-      <div id="teleop_form"> 
-        <div id="t_gear"></div>
-        <div id="t_drop"></div>
-        <div id="t_fuel"></div>
-        <div id="t_climb"></div>
-        Comments: <br>
-        <textarea name="form_comments" cols="50" rows="10" maxlength="150"> </textarea>
-        <div id="t_yellow_card"></div>
+      <div id="scout_match_form">
+        <p id="scout_match_form_header"> <!-- Header info for team + match goes here --> </p>
+        <center><p id="scout_match_form_info" class="bg-warning"> <!-- misc info goes here --></p></center>
+        <button type="button" onclick="redo_form()" class="btn btn-default btn-lg btn-block"> Different Team/Match </button>
+        <div id="auton_form">
+          <br><br>
+          <center><h3> AUTON </h3> <br></center>
+          <!-- These divs are here so we can place our templated inputs inside of them -->
+          <br><div id="a_cross"></div>
+
+          Successful Gear? <br>
+          
+            <input type="radio" name="gear_score" value="YES"> Yes <br>
+            <input type="radio" name="gear_score" value="TRIED"> No, but attempted to <br>
+            <input type="radio" name="gear_score" value="NO" checked="checked" > No, didn't try <br>
+          
+            <br>Gear Routine <br>
+          
+            <input type="radio" name="gear_routine" value="HP"> Human Player Peg<br>
+            <input type="radio" name="gear_routine" value="CENTER"> Center Peg <br>
+            <input type="radio" name="gear_routine" value="BOILER"> Boiler peg<br>
+            <input type="radio" name="gear_routine" value="NONE" checked="checked"> None<br>
+          
+          <br><div id="a_fuel"></div>
+          <div id="a_hopper"></div>
+        </div>
+
+        <br><br>
+
+        <div id="teleop_form">
+          <center><h3> TELEOP </h3> <br></center>
+          <div id="t_gear"></div>
+          <div id="t_drop"></div>
+          <div id="t_fuel"></div>
+          <div id="t_climb"></div>
+          Comments: <br>
+          <textarea id="comments" name="comments" cols="50" rows="10" maxlength="150"> </textarea>
+          <br><div id="t_yellow_card"></div>
+        </div>
+
+        <!-- Tell whether sending was successful here -->
+        <div><center><p id="success_log" class="bg-success"><p></center></div>
+        <div><center><p id="error_log" class="bg-danger"><p></center></div>
+
+        <button type="button" class="btn btn-primary btn-lg btn-block" onclick="submit_data()"> Submit </button>
       </div>
-
-      <!-- Tell whether sending was successful here -->
-      <p id="success_log"><p>
-      
-      <button type="button" onclick="submit_data()"> Submit </button>
-
     </form>
 
-
     <script>
+
+      // Hide form in the beginning
+      $("#scout_match_form").hide();
+
       var counter_template = document.getElementById("counter_template").innerHTML;
       var binary_button_template = document.getElementById("binary_button_template").innerHTML;
 
@@ -163,18 +342,17 @@
           document.getElementById(div).innerHTML += rendered;
       }
 
-      
-      // FORM ITEMS
-      add_binary_button("a_cross", "Crossed the Green Line?", "cross");
-      add_counter("a_fuel", "Fuel Scored (kPa)", "kpa_auton");
-      add_counter("a_hopper", "Hoppers Triggered", "hopper_count");
 
-      add_counter("t_gear", "Gears Scored", "gear_score");
-      add_counter("t_drop", "Gears Dropped", "gear_drop");
-      add_counter("t_fuel", "Fuel Scored", "kpa_teleop");
+      // FORM ITEMS
+      add_binary_button("a_cross", "Crossed the Green Line?", "cross_green_line");
+      add_counter("a_fuel", "Fuel Scored (kPa)", "fuel_auton");
+      add_counter("a_hopper", "Hoppers Triggered", "hoppers");
+
+      add_counter("t_gear", "Gears Scored", "gears_scored");
+      add_counter("t_drop", "Gears Dropped", "gears_dropped");
+      add_counter("t_fuel", "Fuel Scored", "fuel_teleop");
       add_binary_button("t_climb", "Climb?", "climb");
       add_binary_button("t_yellow_card", "Yellow Card?", "yellow_card");
-
 
     </script>
   </body>
