--- a/templates/getdata.html
+++ b/templates/getdata.html
@@ -5,6 +5,9 @@
     <!--TODO: Maybe it would be ligher on the server if we didn't store these locally? -->
     <script type="text/javascript" src="/lib/jquery-3.2.1.min.js"> </script>
 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- Optional theme -->
@@ -48,7 +51,8 @@
                     var value = data[element];
                     // If we're dealing with a boolean
                     if (BOOLEANS.indexOf(element) > -1) {
-                        if (value === "0") value = "NO";
+                        console.log(element + " = " + value);
+                        if (value === "0" || value == 0) value = "NO";
                         else value = "YES";
                     }
 
